# hermes-nats-gateway

./: .gitignore  CHANGELOG.md  README.md  __init__.py  _approval.py  adapter.py  after-install.md  conftest.py  plugin.yaml  pyproject.toml
.github/workflows/: release.yml  tests.yml
scripts/: install-sdks.sh
tests/: _helpers.py  _nats_sdk_mock.py  conftest.py  test_approve_deny_commands.py  test_nats_commands.py  test_nats_config.py  test_nats_connect.py  test_nats_inbound.py  test_nats_outbound.py  test_nats_platform_identity.py  test_nats_query.py  test_nats_register.py  test_profile_collisions.py
