[project]
name = "hermes-nats-gateway"
version = "0.1.2"
description = "Synadia Agent Protocol for NATS gateway for Hermes Agent. Out-of-tree platform plugin."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Synadia" }]
keywords = [
    "hermes",
    "hermes-plugin",
    "nats",
    "synadia-agent-protocol",
    "synadia",
    "ai-agent",
    "gateway",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "synadia-ai-agents>=0.7",
    "synadia-ai-agent-service>=0.4",
    "nats-py>=2.7",
    "pyyaml>=6",
]

[project.urls]
Homepage   = "https://github.com/synadia-ai/hermes-nats-gateway"
Repository = "https://github.com/synadia-ai/hermes-nats-gateway"
Issues     = "https://github.com/synadia-ai/hermes-nats-gateway/issues"
Changelog  = "https://github.com/synadia-ai/hermes-nats-gateway/blob/main/CHANGELOG.md"

[project.entry-points."hermes_agent.plugins"]
nats-platform = "hermes_nats_gateway"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"__init__.py"  = "hermes_nats_gateway/__init__.py"
"adapter.py"   = "hermes_nats_gateway/adapter.py"
"_approval.py" = "hermes_nats_gateway/_approval.py"
"plugin.yaml"  = "hermes_nats_gateway/plugin.yaml"

[tool.hatch.build.targets.sdist]
include = [
    "__init__.py",
    "adapter.py",
    "_approval.py",
    "conftest.py",
    "plugin.yaml",
    "README.md",
    "CHANGELOG.md",
    "after-install.md",
    "LICENSE",
    "pyproject.toml",
    "tests/",
    "images/",
    "scripts/",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
namespace_packages = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# importlib mode prevents pytest from inferring `tests/` as a subpackage of the
# plugin-root `__init__.py` (which the wheel build pins for hatch's
# force-include). Without this, collection walks up, tries to import the root
# `__init__.py`, and fails on its relative `from .adapter import register`.
pythonpath = ["."]
markers = [
    "integration: requires a running nats-server on a non-conflicting port (e.g. 14222)",
]
addopts = "-m 'not integration' --import-mode=importlib"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "hermes-agent>=0.14.0",
    "ruff",
    "mypy",
]
